@@ -1,4 +1,3 @@
-$^O=~/win32|mswin/i and die("OS not supported.\n");
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
@@ -6,17 +5,17 @@ WriteMakefile(
    VERSION_FROM => 'lib/PDF/Burst.pm',
    
 
-   # gen /usr/bin/pmused by Thu Mar 19 12:39:30 EDT 2009 
+   # gen /usr/bin/pmused by Mon Apr 27 15:36:40 EDT 2009 
    PREREQ_PM => {
-      'CAM::PDF'                          => '1.21',
+      'CAM::PDF'                          => '1.52',
       'Carp'                              => '1',
       'Cwd'                               => '3',
       'Exporter'                          => '5',
       'File::Copy'                        => '2.09',
       'File::Which'                       => '0.05',
-      'LEOCHARRE::CLI'                    => '1.18',
-      'LEOCHARRE::DEBUG'                  => '1.12',
-      'LEOCHARRE::Dir'                    => '1.06',
+      'LEOCHARRE::CLI'                    => '1.19',
+      'LEOCHARRE::DEBUG'                  => '1.13',
+      'LEOCHARRE::Dir'                    => '1.07',
       'PDF::API2'                         => '2.015',
       'Test::Simple'                      => '0',
    },
