@@ -1,3 +1,10 @@
+2009-04-27 15:32  cvs
+
+	* lib/PDF/Burst.pm, t/00_find_which_burst_works.t, t/01_burst14.t:
+	  there were some errors using warnings that did not mean anything
+	  that were taken out by either code change or no warnings
+	  statements.
+
 2009-04-20 10:27  cvs
 
 	* lib/PDF/Burst.pm: added some test docs, problematic files.
